--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ body {
 /* Start header section */
 header {
     height: 100vh;
-    background: linear-gradient(30deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
-        url(./../assets/img/banner/banner2.jpg);
+    background: linear-gradient(30deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(./../assets/img/banner/banner2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -119,8 +118,7 @@ header {
 
 /* Start About us section */
 .aboutuss {
-    background: linear-gradient(30deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
-        url(./../assets/img/banner/banner2.jpg);
+    background: linear-gradient(30deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(./../assets/img/banner/banner2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -259,3 +257,122 @@ header {
 }
 
 /* END adv Session */
+
+/*  Start Services Session */
+.services {
+    background: linear-gradient(200deg, var(--sc), var(--pc));
+}
+
+.servicecards {
+    position: relative;
+
+    white-space: pre-wrap;
+}
+
+.servicecards::before {
+    content: 'You may need our service? \A Try and upgrade your living environment. \a \f004 \f004 \f004';
+
+    font-family: 'Font Awesome 5 Free';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #fff;
+    text-align: center;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.servicecards:hover::before {
+    content: '';
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.headings {
+    width: 40%;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    text-align: center;
+    letter-spacing: 1px;
+    opacity: 0.7;
+
+    position: absolute;
+    right: 0;
+    top: 80%;
+}
+
+.servicecards img {
+    transition: transform 0.5s;
+}
+
+.servicecards:hover img {
+    transform: scale(1.1);
+}
+
+/*  End Services Session */
+
+/* Start Client Session */
+
+ul.clientlists {
+    list-style: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+}
+
+ul.clientlists li {
+    background-color: #f4f4f4;
+    border: 5px solid #e9e9e9;
+
+    padding: 20px 30px;
+    margin: 0 auto;
+}
+
+ul.clientlists li:hover {
+    border-color: var(--pc);
+    box-shadow: 3px -5px 3px rgba(0, 0, 0, 0.3);
+}
+
+ul.clientlists img {
+    width: 100px;
+}
+
+@media (max-width: 768px) {
+    ul.clieentlists li {
+        border: 2px solid #e9e9e9;
+        padding: 10px 20px;
+        margin: 0px 5px;
+    }
+
+    ul.clientlists img {
+        width: 70px;
+    }
+
+    ul.clientlists li:hover {
+        border-color: var(--pc);
+        box-shadow: 1px -2px 1px rgba(0, 0, 0, 0.3);
+    }
+}
+
+/* End Client Session */
+
+/*  Start Customer Session */
+
+.customers {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url('./../assets/img/banner/banner3.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+/* End Customer Session */
