--- a/css/style.css
+++ b/css/style.css
@@ -417,5 +417,14 @@ ul.clientlists img {
     transform: translateY(0);
     box-shadow: -3px 3px 3px #444;
 }
-
 /* End Quotation Session */
+
+/* Start Furniture Session */
+.furicons img {
+    width: 70px;
+}
+
+.furicons div:nth-of-type(even) {
+    background-color: #f1f1f1;
+}
+/* End Furniture Session */
