--- a/css/style.css
+++ b/css/style.css
@@ -428,3 +428,14 @@ ul.clientlists img {
     background-color: #f1f1f1;
 }
 /* End Furniture Session */
+
+/* Start Contact Session */
+.contacts {
+    background-image: linear-gradient(100deg, rgba(0, 0, 0, 0.9) 50%, rgba(0, 0, 0, 0.5) 30%, transparent 70%), url(./../assets/img/banner/banner3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+/* End Contact Session */
